# inventory-hex

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini
src/: main.py
src/controllers/: get_products_controllers.py  update_products_controllers.py
src/entities/: products_entities.py
src/repository/: products_repository.py
src/services/: products_event_services.py  products_services.py
src/utils/: events.py
test/: __init__.py  conftest.py  test_api_endpoints.py  test_controllers.py  test_entities.py
